# pinch-backend

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  justfile  prek.toml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.playwright-mcp/: page-2026-07-21T04-30-15-438Z.yml  page-2026-07-21T04-30-38-638Z.yml  page-2026-07-21T04-31-56-124Z.yml  page-2026-07-21T04-32-01-316Z.yml  page-2026-07-21T04-33-39-614Z.yml  page-2026-07-21T04-35-53-320Z.yml  page-2026-07-21T04-37-29-358Z.yml  page-2026-07-21T04-39-54-893Z.yml  page-2026-07-21T04-40-08-921Z.yml  page-2026-07-21T04-40-22-895Z.yml  page-2026-07-21T05-01-22-315Z.yml  page-2026-07-21T05-01-46-249Z.yml  page-2026-07-21T11-59-37-329Z.yml  page-2026-07-21T23-53-22-237Z.yml  page-2026-07-22T00-08-21-643Z.yml  page-2026-07-22T03-50-04-718Z.yml  page-2026-07-22T03-50-23-053Z.yml  page-2026-07-22T03-50-34-365Z.yml  page-2026-07-22T03-50-45-717Z.yml  page-2026-07-22T03-50-59-146Z.yml  page-2026-07-22T03-51-30-361Z.yml  page-2026-07-22T03-52-03-301Z.yml  page-2026-07-22T03-52-18-233Z.yml  page-2026-07-22T03-52-37-173Z.yml  page-2026-07-22T03-53-04-166Z.yml  page-2026-07-22T03-53-08-916Z.yml  page-2026-07-22T03-53-18-040Z.yml  page-2026-07-22T03-53-24-274Z.yml  page-2026-07-22T03-53-34-581Z.yml  page-2026-07-22T03-54-34-822Z.yml
.superpowers/sdd/: progress.md
docs/adr/: 0001-cli-is-a-pure-api-client.md  0002-open-source-multi-tenant-saas.md  0003-postgres-and-block-on-ferro.md  0004-frontend-stack.md  0005-identity-owned-in-app-auth.md  0006-procrastinate-for-background-jobs.md
docs/agents/: design.md  issue-tracker.md
docs/ferro-pdrs/: 0001-joins.md  0002-aggregations-group-by.md  0003-jsonb.md  README.md
docs/ferro-prds/: 0001-joins.md  0003-jsonb.md  (+11 more)
scripts/: gen_cli_docs.py
tests/: conftest.py  test_accounts_api.py  test_api_conventions.py  test_app_lifecycle.py  test_auth_api.py  test_auth_flows.py  test_auth_hardening.py  test_auth_primitives.py  test_auth_seam.py  test_categories_api.py  test_classification_api.py  test_classification_models.py  test_classification_pipeline.py  test_classification_stages.py  test_cli_client.py  test_cli_commands.py  test_connections_api.py  test_consume_proposal.py  test_correction_log_api.py  test_cors.py  test_crypto.py  test_debt_loans.py  test_domain.py  test_flywheel_e2e.py  test_health.py  test_import_completion_api.py  test_imports_api.py  test_jobs.py  test_ledger_stats.py  test_manual_entry_api.py  test_pagination_composite.py  test_pat_api.py  test_pat_primitives.py  test_penny_bundle.py  test_penny_categorization.py  test_penny_chat.py  test_penny_chat_evals.py  test_penny_conversations.py  test_penny_evals.py  test_penny_mapping.py  (+26 more)
(+84 files in other folders)
